sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:13: error: ambiguous reference to overloaded definition,
both method - in class Int of type (x: Char)Int
and  method - in class Int of type (x: Byte)Int
match expected type ?
        fin - = 1
            ^AlgCocktailSort2:20: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
        debut + = 1
              ^